--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
         {% block stylesheets %}{% endblock %}
+
     </head>
     <body>
         {% block body %}{% endblock %}
