--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
+        {{ encore_entry_link_tags('app') }}
         {% block stylesheets %}{% endblock %}
 
     </head>
     <body>
         {% block body %}{% endblock %}
+        {{ encore_entry_script_tags('app') }}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
