--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,12 +3,8 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
+<div class="hero is-primary">
     <h1>Hello </h1>
 
     <div class="columns">
@@ -18,6 +14,6 @@
         <div class="column">4</div>
         <div class="column">5</div>
     </div>
-
 </div>
+
 {% endblock %}
