--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,7 +10,7 @@
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputNumeroElecteur" class="sr-only">Numero Electeur</label>
-    <input type="number" value="{{ last_username }}" name="numeroElecteur" id="inputNumeroElecteur" class="form-control" placeholder="Numero Electeur" required autofocus>
+    <input type="text" value="{{ last_username }}" name="numeroElecteur" id="inputNumeroElecteur" class="form-control" placeholder="Numero Electeur" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
@@ -18,11 +18,16 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    <div class="checkbox mb-3">
-        <label>
-            <input type="checkbox" name="_remember_me"> Remember me
-        </label>
-    </div>
+    {#
+        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+        See https://symfony.com/doc/current/security/remember_me.html
+
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" name="_remember_me"> Remember me
+            </label>
+        </div>
+    #}
 
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
