--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -11,11 +11,24 @@
 {% block body %}
     <style type="text/css">
         #map{
-            height:400px;
+            height: 100vh;
+        }
+
+        #addEvent
+        {
+            position: absolute;
+            bottom: 40px;
+            right: 2px;
+            z-index: 1;
+            transform: scale(0.7, 0.7);
         }
     </style>
 
     <div id="map">
+    </div>
+
+    <div id="addEvent">
+        <a href="{{ path('home') }}"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Nuvola_Red_Plus.svg/2000px-Nuvola_Red_Plus.svg.png"/></a>
     </div>
 
 
@@ -25,24 +38,16 @@
 {% block javascripts %}
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
             crossorigin=""></script>
-    <script type='text/javascript' src='https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js'></script>
     <script type="text/javascript">
-        var lat = 48.852969;
-        var lon = 2.349903;
-        var macarte = null;
-        var markerClusters;
-        var villes = {
-            "Paris": { "lat": 48.852969, "lon": 2.349903 },
-            "Brest": { "lat": 48.383, "lon": -4.500 },
-            "Quimper": { "lat": 48.000, "lon": -4.100 },
-            "Bayonne": { "lat": 43.500, "lon": -1.467 }
-        };
+        // On initialise la latitude et la longitude de Lyon (centre de la carte)
+        let lat = 45.75;
+        let lon = 4.85;
+        let macarte = null;
+        let zoom = 14; // Zoom de la carte par défaut
+        // Fonction d'initialisation de la carte
         function initMap() {
-            // Nous définissons le dossier qui contiendra les marqueurs
-            var iconBase = 'http://localhost/carte/icons/';
             // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
-            macarte = L.map('map').setView([lat, lon], 11);
-            markerClusters = L.markerClusterGroup(); // Nous initialisons les groupes de marqueurs
+            macarte = L.map('map').setView([lat, lon], zoom);
             // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
             L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png', {
                 // Il est toujours bien de laisser le lien vers la source des données
@@ -50,24 +55,38 @@
                 minZoom: 1,
                 maxZoom: 20
             }).addTo(macarte);
-            // Nous parcourons la liste des villes
-            for (ville in villes) {
-                // Nous définissons l'icône à utiliser pour le marqueur, sa taille affichée (iconSize), sa position (iconAnchor) et le décalage de son ancrage (popupAnchor)
-                var myIcon = L.icon({
-                    iconUrl: iconBase + "autres.png",
-                    iconSize: [50, 50],
-                    iconAnchor: [25, 50],
-                    popupAnchor: [-3, -76],
-                });
-                var marker = L.marker([villes[ville].lat, villes[ville].lon], { icon: myIcon }); // pas de addTo(macarte), l'affichage sera géré par la bibliothèque des clusters
-                marker.bindPopup(ville);
-                markerClusters.addLayer(marker); // Nous ajoutons le marqueur aux groupes
-            }
-            macarte.addLayer(markerClusters);
         }
         window.onload = function(){
             // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
             initMap();
+
+            let adresses =
+                [
+                    {% for problem in problems %}
+                    {
+                        lat : '{{ problem.lat }}',
+                        long : '{{ problem.lon }}',
+                        id : '{{ problem.id }}',
+                        type: '{{ problem.type }}',
+                        address: '{{ problem.address }}',
+                        city: '{{ problem.city }}',
+                        ZC: '{{ problem.zipcode }}'
+                    },
+                    {% endfor %}
+                ];
+            // Nous parcourons la liste des adresses
+            for (adresse in adresses) {
+                let marker = L.marker([adresses[adresse].lat, adresses[adresse].long]).bindPopup(
+                    "<h5>"+adresses[adresse].type+"</h5> <p>"
+                    + adresses[adresse].address + "</p>"+
+                    "<p>"
+                    + adresses[adresse].ZC + " " + adresses[adresse].city +
+                    "</p>"
+                )
+                    .addTo(macarte);
+                // Nous ajoutons la popup. A noter que son contenu (ici la variable ville) peut être du HTML
+                //marker.bindPopup(adresses[adresse].place).openPopup();
+            }
         };
     </script>
 
