add add event button

--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -6,30 +6,51 @@
           crossorigin="" />
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css"
 {% endblock %}
 
 {% block body %}
     <style type="text/css">
         #map{
             height: 100vh;
+            z-index: 0;
         }
 
-        #addEvent
-        {
-            position: absolute;
-            bottom: 40px;
-            right: 2px;
-            z-index: 1;
-            transform: scale(0.7, 0.7);
+        .addEventButt {
+            position: fixed;
+            /* Fixed/sticky position */
+            bottom: 50px;
+            /* Place the button at the bottom of the page */
+            right: 50px;
+            /* Place the button 30px from the right */
+            z-index: 99;
+            /* Make sure it does not overlap */
+            border: none;
+            /* Remove borders */
+            outline: none;
+            /* Remove outline */
+            cursor: pointer;
+            /* Add a mouse pointer on hover */
+            padding: 20px;
+            /* Some padding */
+            border-radius: 35px;
+            /* Rounded corners */
+            background-color: #fb3;
+        }
+
+        .addEventButt:hover {
+            background-color: #b20000;
+            /* Add a dark-grey background on hover */
+            transition-duration: 0.5s;
         }
     </style>
 
     <div id="map">
     </div>
 
-    <div id="addEvent">
-        <a href="{{ path('home') }}"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Nuvola_Red_Plus.svg/2000px-Nuvola_Red_Plus.svg.png"/></a>
-    </div>
+    <button type="button" class="btn addEventButt text-white" data-toggle="modal" data-target="#modalEvent">
+        <i class="fas fa-plus"></i>
+    </button>
 
 
 
