--- a/templates/map/map.html.twig
+++ b/templates/map/map.html.twig
@@ -15,15 +15,31 @@
     <div id="map">
     </div>
 
-    <button type="button" class="btn addEventButt text-white" data-toggle="modal" data-target="#modalEvent">
-        <i class="fas fa-plus"></i>
-    </button>
+    <button id="btnmodal" class="button addEventButt is-outlined">Primary</button>
+
+    <div id="modal" class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-head">
+                <p class="modal-card-title">Modal title</p>
+                <button id="cancel" class="delete" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body">
+                <!-- Content ... -->
+            </section>
+            <footer class="modal-card-foot">
+                <button class="button is-success">Save changes</button>
+                <button id="closeModal" class="button closeModal">Cancel</button>
+            </footer>
+        </div>
+    </div>
 
 
 
 
 {% endblock %}
 {% block javascripts %}
+    {{ encore_entry_script_tags('main') }}
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
             crossorigin=""></script>
     <script type="text/javascript">
@@ -79,3 +95,4 @@
     </script>
 
 {% endblock%}
+
