--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,17 +4,10 @@
 
 {% block body %}
 
-<div class="section">
-    <div class="container">
-        <h1>Hello </h1>
-
-        <div class="columns">
-            <div class="column">1</div>
-            <div class="column">2</div>
-            <div class="column">3</div>
-            <div class="column">4</div>
-            <div class="column">5</div>
+    <div class="container is-fluid">
+        <div class="notification">
+            This container is <strong>fluid</strong>: it will have a 32px gap on either side, on any
+            viewport size.
         </div>
     </div>
-</div>
 {% endblock %}
