--- a/assets/scss/utilities/derived-variables.sass
+++ b/assets/scss/utilities/derived-variables.sass
@@ -1,6 +1,6 @@
 $primary: $turquoise !default
 
-$info: $cyan !default
+$info: #78DEDE !default
 $success: $green !default
 $warning: $yellow !default
 $danger: $red !default
