--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -7,10 +7,10 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    Titre
+                  Titre : {{ demande.titre }}
                 </h1>
                 <h2 class="subtitle">
-                    deadline : le 01/01/2019
+
                 </h2>
             </div>
         </div>
@@ -27,10 +27,8 @@
                 <div class="columns">
                     <div class="column">
                         <div class="box">
-                            <p>On sait depuis longtemps que travailler avec du texte lisible et
-                                contenant du sens est source de distractions, et empêche de se
-                                concentrer sur la mise en page elle-même
-                            </p>
+                            <p>{{ demande.sommaire }}</p>
+
                         </div>
                     </div>
                 </div>
@@ -47,19 +45,7 @@
                 <div class="columns">
                     <div class="column">
                         <div class="box">
-                            <p>On sait depuis longtemps que travailler avec du texte lisible et
-                                contenant du sens est source de distractions, et empêche de se
-                                concentrer sur la mise en page elle-même
-                                On sait depuis longtemps que travailler avec du texte lisible et
-                                contenant du sens est source de distractions, et empêche de se
-                                concentrer sur la mise en page elle-même
-                                On sait depuis longtemps que travailler avec du texte lisible et
-                                contenant du sens est source de distractions, et empêche de se
-                                concentrer sur la mise en page elle-même
-                                On sait depuis longtemps que travailler avec du texte lisible et
-                                contenant du sens est source de distractions, et empêche de se
-                                concentrer sur la mise en page elle-même
-                            </p>
+                            <p>{{ demande.contenu }}</p>
                         </div>
                     </div>
                 </div>
@@ -78,7 +64,7 @@
                     <div class="column">
                         <div class="box">
                             <p>
-                                170 000€
+                              {{ demande.budget }} €
                             </p>
                         </div>
                     </div>
@@ -87,7 +73,7 @@
         </div>
 
 
-        <div class="colmuns">
+        <div class="columns">
             <div class="column">
                 <h3 class="title is-3 has-text-grey">Ils ont voté</h3>
             </div>
@@ -109,7 +95,7 @@
                                 </div>
                                 <div class="level-right">
                                     <div class="level-item">
-                                        <p>Pour <span>988 050</span></p>
+                                        <p>Pour <span>{{ demande.nombreVotes }} votants</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -180,9 +166,7 @@
                     <div class="column">
                         <div class="box">
                             <div class="buttons has-addons is-centered">
-                                <a href="{{ path("vote_avote", {'id' : demande.id, 'vote':'Pour'}) }}" class="button">Vote Pour</a>
-                                <a href="{{ path("vote_avote", {'id' : demande.id, 'vote':'Abstention'}) }}" class="button">Vote Abstention</a>
-                                <a href="{{ path("vote_avote", {'id' : demande.id, 'vote':'Contre'}) }}" class="class="button"">Vote Contre</a>
+
                             </div>
                         </div>
                     </div>
