mise à jour routes show

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -79,6 +79,7 @@
                 <a href="{{ path("vote_avote", {'id' : demande.id, 'vote':'Abstention'}) }}">Vote Abstention</a>
                 <div>
 
+                  {% endfor %}
                 <div class="level has-text-grey">
                     <div class="level-left has-text-weight-semibold">
                         <p>Titre</p>
@@ -177,7 +178,6 @@
                         </div>
                     </div>
                 </div>
-
 
                 <div class="level">
                     <div class="level-item -mt-1">
