--- a/templates/demandes/index.html.twig
+++ b/templates/demandes/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Demandes index{% endblock %}
 
 {% block body %}
-    {{ dump(demandes) }}
+
 <div class="container is-fluid has-text-white">
     <div class="level-item">
         <div class="field has-addons">
@@ -11,7 +11,9 @@
                 <div class="select is-medium is-primary">
                     <select>
                         <option>CATEGORY</option>
-                        <option>With options</option>
+                        {% for categorie in categories %}
+                            <option>{{ categorie.nom }}</option>
+                        {% endfor %}
                     </select>
                 </div>
             </div>
@@ -27,32 +29,21 @@
     </div>
 
     <!-- TABS -->
-    <div class="tabs is-boxed is-fullwidth">
-        <ul>
-            <li class="is-active">
-                <a style="background-color: #F9F9F9">
-                    <span class="has-text-grey has-text-weight-bold">Ouvertes</span>
-                </a>
+    <div class="tabs is-toggle is-fullwidth">
+            <li class="{% if app.request.get('_route') == 'demandes_ouvertes' %}is-active{% endif %}">
+                <a href="{{ path('demandes_ouvertes') }}" class="has-text-grey has-text-weight-bold" style="background-color: #F9F9F9">Ouvertes</a>
             </li>
-            <li>
-                <a style="background-color: #F9F9F9">
-                    <span class="has-text-grey has-text-weight-bold">Terminées</span>
-                </a>
+            <li class="{% if app.request.get('_route') == 'demandes_terminees' %}is-active{% endif %}">
+                <a href="{{ path('demandes_terminees') }}" class="has-text-grey has-text-weight-bold" style="background-color: #F9F9F9">Terminées</a>
             </li>
-            <li>
-                <a style="background-color: #F9F9F9">
-                    <span class="has-text-grey has-text-weight-bold">Completées</span>
-                </a>
+            <li class="{% if app.request.get('demandes_validees') == 'current_route' %}is-active{% endif %}">
+                <a href="{{ path('demandes_validees') }}" class="has-text-grey has-text-weight-bold" style="background-color: #F9F9F9">Completées</a>
             </li>
-            <li>
-                <a style="background-color: #F9F9F9">
-                    <span class="has-text-grey has-text-weight-bold">Rejetées</span>
-                </a>
+            <li class="{% if app.request.get('demandes_rejetees') == 'current_route' %}is-active{% endif %}">
+                <a href="{{ path('demandes_rejetees') }}" class="has-text-grey has-text-weight-bold" style="background-color: #F9F9F9">Rejetées</a>
             </li>
-            <li>
-                <a style="background-color: #F9F9F9">
-                    <span class="has-text-grey has-text-weight-bold">Annulées</span>
-                </a>
+            <li class="{% if app.request.get('_route') == 'demandes_annulees' %}is-active{% endif %}">
+                <a href="{{ path('demandes_annulees') }}" class="has-text-grey has-text-weight-bold" style="background-color: #F9F9F9">Annulée</a>
             </li>
         </ul>
     </div>
@@ -65,7 +56,7 @@
         <div class="column">
             <div class="level">
                 <div class="level-left">
-                    <span class="tag is-primary"></span>
+                    <span class="tag is-primary">{{ demande.categorie.nom }}</span>
                 </div>
             </div>
             <div class="level has-text-weight-semibold">
@@ -105,6 +96,7 @@
         </div>
 {# Block right #}
         <div class="column">
+            {% if app.request.get('_route') != 'demandes_annulees' %}
             <div class="level">
                 <div class="level-left">
                     <div class="level-item">
@@ -139,7 +131,7 @@
                 </div>
                 <div class="level-right">
                     <div class="level-item">
-                        <p>Pour <span>{{ countStatus[demande.id]['contre'] }}</span></p>
+                        <p>Pour <span>{{ countStatus[demande.id]['pour'] }}</span></p>
                     </div>
                 </div>
             </div>
@@ -169,6 +161,7 @@
                     <progress class="progress" value="{{ pourcentageVotes[demande.id]['abstention'] }}" max="100"></progress>
                 </div>
             </div>
+            {% endif %}
         </div>
 {# End right #}
     </div>
